@@ -1,4 +1,4 @@
-MOSH=../mosh --disable-acc # bignum/flonum serialization is not supported
+MOSH=../mosh
 
 test:
 	$(MOSH) tests/r6rs/run/io/ports.sps
@@ -26,5 +26,5 @@ test:
 	$(MOSH) tests/r6rs/run/conditions.sps
 	$(MOSH) tests/r6rs/run/r5rs.sps
 	$(MOSH) tests/r6rs/run/eval.sps
-	$(MOSH) tests/r6rs/run/base.sps
-	$(MOSH) tests/r6rs/run-via-eval.sps
+	$(MOSH) --disable-acc tests/r6rs/run/base.sps
+	$(MOSH) --disable-acc tests/r6rs/run-via-eval.sps
