@@ -1,5 +1,7 @@
 2009-07-28  higepon  <higepon@users.sourceforge.jp>
 
+        * Fasl.h (scheme): Added Ratnum and Compnum support.
+
         * Bignum.h (scheme): Added serialize/deserialize.
 
 2009-07-27  higepon  <higepon@users.sourceforge.jp>
